--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -1,7 +1,7 @@
 <main
 	class="flex flex-col md:flex-row items-start justify-center w-full min-h-screen px-wrapper pt-9 pb-14 gap-9 md:gap-16 relative"
 >
-	<app-aside class="hidden md:flex"></app-aside>
+	<app-aside class="hidden md:flex md:sticky md:top-8"></app-aside>
 	<div
 		class="flex flex-col items-start justify-start gap-9 max-md:w-full flex-1"
 	>
