✨ feat: submit select section 3 with validator

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -45,7 +45,7 @@
 					(click)="openUploadDialog()"
 				>
 					<mat-icon>cloud_upload</mat-icon>
-					Upload
+					Submit
 				</button>
 			</li>
 		</ul>
