🎨 feat: submit success dialog

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,14 @@ body {
 	}
 }
 
+.stamp-effect {
+	mask-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png");
+	-webkit-mask-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png");
+	mask-size: 944px 604px;
+	-webkit-mask-size: 944px 604px;
+	mix-blend-mode: multiply;
+}
+
 :root {
 	--wrapper: 1.5rem;
 }
