💣 feat: initial authentication drop (too messy, i know)

--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -84,7 +84,7 @@
 					<app-list-section class="w-full" title="June 2024">
 						@for (chart of charts; track $index) {
 							<app-chart
-								routerLink="/chart"
+								routerLink="/chart/1"
 								[name]="chart.name"
 								[artist]="chart.artist"
 								[coverUrl]="chart.coverUrl"
