--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -83,7 +83,11 @@
 					<mat-icon>settings</mat-icon>
 					<span>Settings</span>
 				</button>
-				<button mat-menu-item class="pr-12">
+				<button
+					(click)="onLogoutButtonClick()"
+					mat-menu-item
+					class="pr-12"
+				>
 					<mat-icon>logout</mat-icon>
 					<span>Sign-out</span>
 				</button>
