--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -1,194 +1,202 @@
-<main
-	class="flex flex-col md:flex-row items-start justify-center w-full min-h-screen px-wrapper pt-9 pb-14 gap-9 md:gap-16 relative"
->
-	<app-aside class="hidden md:flex md:sticky md:top-8"></app-aside>
-	<div
-		class="flex flex-col items-start justify-start gap-9 max-md:w-full flex-1"
+@if (chart) {
+	<main
+		class="flex flex-col md:flex-row items-start justify-center w-full min-h-screen px-wrapper pt-9 pb-14 gap-9 md:gap-16 relative"
 	>
-		<div class="flex flex-col items-start justify-start gap-2 relative">
-			<h1 class="font-medium text-5xl">We Live Forever</h1>
-			<h2 class="text-3xl">The Prodigy</h2>
-		</div>
-		<app-aside class="flex w-full md:hidden"></app-aside>
-		<app-chart-section class="w-full" title="Known Issues">
-			<ul
-				class="flex flex-col items-start justify-start w-full rounded-lg bg-surface-container border border-inverse-on-surface overflow-hidden"
-			>
-				@if (knownIssues.length > 0) {
-					@for (issue of knownIssues; track $index) {
-						<li
-							class="flex flex-row items-center justify-between w-full gap-2 font-normal px-4 py-2 text-sm"
-							[ngClass]="{
-								'border-b border-b-inverse-on-surface':
-									$index !== knownIssues.length - 1,
-							}"
+		<app-aside class="hidden md:flex md:sticky md:top-8"></app-aside>
+		<div
+			class="flex flex-col items-start justify-start gap-9 max-md:w-full flex-1"
+		>
+			<div class="flex flex-col items-start justify-start gap-2 relative">
+				<h1 class="font-medium text-5xl">We Live Forever</h1>
+				<h2 class="text-3xl">The Prodigy</h2>
+			</div>
+			<app-aside class="flex w-full md:hidden"></app-aside>
+			<app-chart-section class="w-full" title="Known Issues">
+				<ul
+					class="flex flex-col items-start justify-start w-full rounded-lg bg-surface-container border border-inverse-on-surface overflow-hidden"
+				>
+					@if (chart.knownIssues.length > 0) {
+						@for (issue of chart.knownIssues; track $index) {
+							<li
+								class="flex flex-row items-center justify-between w-full gap-2 font-normal px-4 py-2 text-sm"
+								[ngClass]="{
+									'border-b border-b-inverse-on-surface':
+										$index !== chart.knownIssues.length - 1,
+								}"
+							>
+								<span>• {{ issue }}</span>
+								<div
+									class="flex flex-row items-center justify-end gap-2"
+								>
+									<button
+										mat-icon-button
+										matTooltip="Remove issue"
+										matTooltipPosition="above"
+										matTooltipShowDelay="375"
+										matTooltipClass="!text-sm"
+										(click)="
+											openRemoveIssueConfirmationDialog(
+												$index
+											)
+										"
+									>
+										<span
+											class="text-lg align-middle leading-none"
+										>
+											<mat-icon inline
+												>playlist_remove</mat-icon
+											>
+										</span>
+									</button>
+									<button
+										mat-icon-button
+										matTooltip="Close issue"
+										matTooltipPosition="above"
+										matTooltipShowDelay="375"
+										matTooltipClass="!text-sm"
+										(click)="
+											openCloseIssueConfirmationDialog(
+												$index
+											)
+										"
+									>
+										<span
+											class="text-lg align-middle leading-none"
+										>
+											<mat-icon inline
+												>playlist_add_check</mat-icon
+											>
+										</span>
+									</button>
+								</div>
+							</li>
+						}
+					} @else {
+						<div
+							class="flex flex-col items-center justify-center gap-4 w-full py-9"
 						>
-							<span>• {{ issue }}</span>
+							<span class="text-4xl"
+								><mat-icon inline>airwave</mat-icon></span
+							>
+							<h1 class="text-base font-medium">
+								There are currently no known issues
+							</h1>
+							<p class="text-sm text-center">
+								New added issues will be listed here
+							</p>
+						</div>
+					}
+					@if (addIssueInputVisible()) {
+						<li
+							class="flex flex-row items-center justify-between w-full gap-2 font-normal px-4 py-2 text-sm animate-pulse border-t border-t-inverse-on-surface"
+						>
+							<span class="w-full">
+								•
+								<input
+									id="addIssue"
+									class="bg-transparent outline-none border-none w-3/4"
+									[(ngModel)]="newIssue"
+									(keydown.enter)="addIssue()"
+									type="text"
+									placeholder="Describe the issue..."
+							/></span>
 							<div
 								class="flex flex-row items-center justify-end gap-2"
 							>
 								<button
-									mat-icon-button
-									matTooltip="Remove issue"
-									matTooltipPosition="above"
-									matTooltipShowDelay="375"
-									matTooltipClass="!text-sm"
-									(click)="
-										openRemoveIssueConfirmationDialog(
-											$index
-										)
-									"
+									mat-raised-button
+									class="!bg-transparent"
+									(click)="cancelAddIssue()"
 								>
-									<span
-										class="text-lg align-middle leading-none"
-									>
-										<mat-icon inline
-											>playlist_remove</mat-icon
-										>
-									</span>
+									Cancel
 								</button>
-								<button
-									mat-icon-button
-									matTooltip="Close issue"
-									matTooltipPosition="above"
-									matTooltipShowDelay="375"
-									matTooltipClass="!text-sm"
-									(click)="
-										openCloseIssueConfirmationDialog($index)
-									"
-								>
-									<span
-										class="text-lg align-middle leading-none"
-									>
-										<mat-icon inline
-											>playlist_add_check</mat-icon
-										>
-									</span>
+								<button mat-raised-button (click)="addIssue()">
+									<mat-icon>playlist_add</mat-icon>
+									Add
 								</button>
 							</div>
 						</li>
 					}
-				} @else {
-					<div
-						class="flex flex-col items-center justify-center gap-4 w-full py-9"
-					>
-						<span class="text-4xl"
-							><mat-icon inline>airwave</mat-icon></span
+				</ul>
+				@if (!addIssueInputVisible()) {
+					<span class="flex items-center justify-end w-full">
+						<button
+							mat-stroked-button
+							(click)="addIssueInputVisible.set(true)"
 						>
-						<h1 class="text-base font-medium">
-							There are currently no known issues
-						</h1>
-						<p class="text-sm text-center">
-							New added issues will be listed here
-						</p>
-					</div>
+							<mat-icon>add_playlist</mat-icon>
+							Add new issue
+						</button>
+					</span>
 				}
-				@if (addIssueInputVisible()) {
-					<li
-						class="flex flex-row items-center justify-between w-full gap-2 font-normal px-4 py-2 text-sm animate-pulse border-t border-t-inverse-on-surface"
-					>
-						<span class="w-full">
-							•
-							<input
-								id="addIssue"
-								class="bg-transparent outline-none border-none w-3/4"
-								[(ngModel)]="newIssue"
-								(keydown.enter)="addIssue()"
-								type="text"
-								placeholder="Describe the issue..."
-						/></span>
-						<div
-							class="flex flex-row items-center justify-end gap-2"
-						>
-							<button
-								mat-raised-button
-								class="!bg-transparent"
-								(click)="cancelAddIssue()"
-							>
-								Cancel
-							</button>
-							<button mat-raised-button (click)="addIssue()">
-								<mat-icon>playlist_add</mat-icon>
-								Add
-							</button>
-						</div>
-					</li>
-				}
-			</ul>
-			@if (!addIssueInputVisible()) {
+			</app-chart-section>
+			<app-chart-section class="w-full" title="Contributors">
+				<app-table
+					#contributorTable
+					class="w-full"
+					[columns]="contributorsColumns"
+					[data]="chart.contributors"
+					[actions]="contributorsActions"
+				></app-table>
 				<span class="flex items-center justify-end w-full">
 					<button
 						mat-stroked-button
-						(click)="addIssueInputVisible.set(true)"
+						(click)="
+							openSnackBar('Feature not implemented yet', 'Close')
+						"
 					>
-						<mat-icon>add_playlist</mat-icon>
-						Add new issue
+						<mat-icon>add</mat-icon>
+						Add new contributor
 					</button>
 				</span>
-			}
-		</app-chart-section>
-		<app-chart-section class="w-full" title="Contributors">
-			<app-table
-				#contributorTable
-				class="w-full"
-				[columns]="contributorsColumns"
-				[data]="contributorsData"
-				[actions]="contributorsActions"
-			></app-table>
-			<span class="flex items-center justify-end w-full">
-				<button
-					mat-stroked-button
-					(click)="
-						openSnackBar('Feature not implemented yet', 'Close')
-					"
-				>
-					<mat-icon>add</mat-icon>
-					Add new contributor
-				</button>
-			</span>
-		</app-chart-section>
-		<app-chart-section class="w-full" title="Versions">
-			<app-table
-				#versionTable
-				class="w-full"
-				[columns]="versionsColumns"
-				[data]="versionsData"
-				[actions]="versionsActions"
-				hasSorting="true"
-				initialSortColumn="id"
-				initialSortDirection="desc"
-			></app-table>
-			<span class="flex items-center justify-end w-full">
-				<button
-					mat-stroked-button
-					(click)="
-						openSnackBar('Feature not implemented yet', 'Close')
-					"
-				>
-					<mat-icon>publish</mat-icon>
-					Publish new version
-				</button>
-			</span>
-		</app-chart-section>
-		<app-chart-section class="w-full" title="Danger Zone">
-			<ul
-				class="flex flex-col items-start justify-start w-full rounded-lg border border-error-container overflow-hidden"
-			>
-				<li
-					class="flex flex-col md:flex-row items-center justify-between w-full gap-2 font-normal px-4 py-3 text-sm"
-				>
-					<div class="flex flex-col items-start justify-start gap-1">
-						<h6 class="font-medium">Delete this chart</h6>
-						<p>
-							Once you delete a chart, there is no going back.
-							Please be certain.
-						</p>
-					</div>
-					<button mat-raised-button class="!bg-red-100/5">
-						Delete this chart
+			</app-chart-section>
+			<app-chart-section class="w-full" title="Versions">
+				<app-table
+					#versionTable
+					class="w-full"
+					[columns]="versionsColumns"
+					[data]="chart.versions"
+					[actions]="versionsActions"
+					hasSorting="true"
+					initialSortColumn="id"
+					initialSortDirection="desc"
+				></app-table>
+				<span class="flex items-center justify-end w-full">
+					<button
+						mat-stroked-button
+						(click)="
+							openSnackBar('Feature not implemented yet', 'Close')
+						"
+					>
+						<mat-icon>publish</mat-icon>
+						Publish new version
 					</button>
-				</li>
-			</ul>
-		</app-chart-section>
-	</div>
-</main>
+				</span>
+			</app-chart-section>
+			<app-chart-section class="w-full" title="Danger Zone">
+				<ul
+					class="flex flex-col items-start justify-start w-full rounded-lg border border-error-container overflow-hidden"
+				>
+					<li
+						class="flex flex-col md:flex-row items-center justify-between w-full gap-2 font-normal px-4 py-3 text-sm"
+					>
+						<div
+							class="flex flex-col items-start justify-start gap-1"
+						>
+							<h6 class="font-medium">Delete this chart</h6>
+							<p>
+								Once you delete a chart, there is no going back.
+								Please be certain.
+							</p>
+						</div>
+						<button mat-raised-button class="!bg-red-100/5">
+							Delete this chart
+						</button>
+					</li>
+				</ul>
+			</app-chart-section>
+		</div>
+	</main>
+} @else {
+	<app-not-found></app-not-found>
+}
