--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -85,7 +85,7 @@
 						@for (chart of charts; track $index) {
 							<app-chart
 								routerLink="/chart/5703948f-b828-40e8-a99b-917931d5933b"
-								[name]="chart.name"
+								[track]="chart.track"
 								[artist]="chart.artist"
 								[coverUrl]="chart.coverUrl"
 								[duration]="chart.duration"
