--- a/src/app/routes/auth/callback/callback.component.html
+++ b/src/app/routes/auth/callback/callback.component.html
@@ -4,26 +4,15 @@
 	<div
 		class="flex flex-col items-center justify-center bg-surface-container rounded-2xl gap-9 p-12 w-full md:w-[400px] max-w-[90vw]"
 	>
-		<h1 class="font-extrabold text-2xl">Login</h1>
+		<h1 class="font-extrabold text-2xl">Authenticating...</h1>
 		<div class="flex flex-col items-center justify-center gap-6 w-full">
 			<h2 class="font-medium text-base text-center">
-				Log in with your Discord account to authenticate
+				Please wait while we authenticate your account
 			</h2>
-			<button
-				class="text-on-primary w-full !py-6"
-				mat-flat-button
-				(click)="login()"
-			>
-				<mat-icon
-					inline="true"
-					svgIcon="discord"
-					class="text-on-primary !w-6 !h-6 !mr-4"
-					aria-hidden="false"
-					aria-label="Discord logo"
-				></mat-icon>
-
-				Login with Discord
-			</button>
+			<mat-progress-spinner
+				mode="indeterminate"
+				diameter="48"
+			></mat-progress-spinner>
 		</div>
 		<div class="flex flex-col items-center justify-center gap-6 w-full">
 			<div class="flex w-1/4 h-[1px] bg-on-surface-variant"></div>
