🔧 refactor:  changed chart file data processing

--- a/src/app/components/file-upload/file-upload.component.html
+++ b/src/app/components/file-upload/file-upload.component.html
@@ -29,6 +29,8 @@
 					Select the file
 				}
 				<input
+					matInput
+					[formControlName]="formControlName"
 					id="file-upload"
 					class="hidden"
 					type="file"
