--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -106,7 +106,7 @@
 					<app-list-section class="w-full" title="June 2024">
 						@for (chart of charts; track $index) {
 							<app-chart
-								routerLink="/chart/5703948f-b828-40e8-a99b-917931d5933b"
+								[routerLink]="['/chart', chart.id]"
 								[track]="chart.track"
 								[artist]="chart.artist"
 								[coverUrl]="chart.coverUrl"
