✨ feat: improved not found and error pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-@if (authService.isLoggedIn()) {
+@if (showHeaderFooter) {
 	<app-header></app-header>
 }
 <router-outlet />
-@if (authService.isLoggedIn()) {
+@if (showHeaderFooter) {
 	<app-footer></app-footer>
 }
