--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -1,14 +1,22 @@
-@if (chart) {
+@if (chart && latestVersion) {
 	<main
 		class="flex flex-col md:flex-row items-start justify-center w-full min-h-screen px-wrapper pt-9 pb-14 gap-9 md:gap-16 relative"
 	>
-		<app-aside class="hidden md:flex md:sticky md:top-8"></app-aside>
+		<app-aside
+			[chartUrl]="latestVersion.chartUrl"
+			[coverUrl]="chart.coverUrl"
+			[duration]="latestVersion.duration"
+			[notesAmount]="latestVersion.notesAmount"
+			[trackName]="chart.track"
+			class="hidden md:flex md:sticky md:top-8"
+		>
+		</app-aside>
 		<div
 			class="flex flex-col items-start justify-start gap-9 max-md:w-full flex-1"
 		>
 			<div class="flex flex-col items-start justify-start gap-2 relative">
-				<h1 class="font-medium text-5xl">We Live Forever</h1>
-				<h2 class="text-3xl">The Prodigy</h2>
+				<h1 class="font-medium text-5xl">{{ chart.track }}</h1>
+				<h2 class="text-3xl">{{ chart.artist }}</h2>
 			</div>
 			<app-aside class="flex w-full md:hidden"></app-aside>
 			<app-chart-section class="w-full" title="Known Issues">
@@ -135,7 +143,7 @@
 					#contributorTable
 					class="w-full"
 					[columns]="contributorsColumns"
-					[data]="chart.contributors"
+					[data]="chart.contributors ?? []"
 					[actions]="contributorsActions"
 				></app-table>
 				<span class="flex items-center justify-end w-full">
@@ -198,5 +206,5 @@
 		</div>
 	</main>
 } @else {
-	<app-not-found></app-not-found>
+	error loading data
 }
