--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -19,10 +19,12 @@
 			</div>
 		</div>
 	} @else if (charts === undefined) {
-		<mat-progress-spinner
-			diameter="48"
-			mode="indeterminate"
-		></mat-progress-spinner>
+		<div class="flex flex-1 items-center justify-center">
+			<mat-progress-spinner
+				diameter="48"
+				mode="indeterminate"
+			></mat-progress-spinner>
+		</div>
 	} @else if (!filters.length && !charts.length) {
 		<div class="flex flex-col items-center justify-start gap-6 w-full">
 			<div
