🐛 fix: authentication and error handling issues

--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -12,6 +12,7 @@
 				<h1 class="text-2xl">
 					Oops, something went wrong while fetching your charts
 				</h1>
+				"{{ this.error }}" <br />
 				<p class="max-w-[65%] text-center">
 					Please try again later or check Discord if the problem
 					persists
