🎨 fix: slider text size

--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -88,6 +88,7 @@
 				translateX(-32.5px),
 			value-indicator-text-transform: rotate(0deg),
 			value-indicator-border-radius: 4px,
+			label-label-text-size: 0.8rem,
 		)
 	);
 
