--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -149,9 +149,7 @@
 				<span class="flex items-center justify-end w-full">
 					<button
 						mat-stroked-button
-						(click)="
-							openSnackBar('Feature not implemented yet', 'Close')
-						"
+						(click)="openAddContributorConfirmationDialog()"
 					>
 						<mat-icon>add</mat-icon>
 						Add new contributor
