✨ feat: search debounce and autocomplete

--- a/src/app/components/avatar/avatar.component.html
+++ b/src/app/components/avatar/avatar.component.html
@@ -1,6 +1,6 @@
 @if (src) {
 	<img
-		class="rounded-full"
+		class="rounded-full aspect-square object-cover"
 		[ngStyle]="{ width: size + 'px', height: size + 'px' }"
 		[src]="src"
 		[alt]="alt"
