--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -7,8 +7,12 @@
 		>
 	</span>
 	<input
+		#input
 		class="pr-6 pl-[3.75rem] py-3 bg-surface-container-high text-on-surface-variant rounded-full w-full"
 		type="text"
-		placeholder="Search for charts, tourpasses and themes..."
+		[placeholder]="placeholder"
+		(input)="onInput($event)"
+		[matAutocomplete]="autoComplete"
 	/>
+	<ng-content></ng-content>
 </div>
