--- a/src/app/routes/published/published.component.html
+++ b/src/app/routes/published/published.component.html
@@ -79,6 +79,7 @@
 				class="flex flex-col md:flex-row items-center justify-start w-full gap-4"
 			>
 				<app-searchbar
+					placeholder="Search for charts, tourpasses and themes..."
 					class="flex flex-1 max-md:w-full relative"
 				></app-searchbar>
 				<span
