--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -149,6 +149,10 @@
 		margin-right: 0.5rem;
 	}
 
+	.mdc-list-item__primary-text {
+		width: 100%;
+	}
+
 	/* .mat-mdc-cell:first-child {
 		text-align: left;
 	} */
