--- a/src/app/routes/chart/dialogs/add-contributor/add-contributor-dialog.component.html
+++ b/src/app/routes/chart/dialogs/add-contributor/add-contributor-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Add contributor</h2>
-<mat-dialog-content>
-	<p class="mb-4">Tag some creators to add them to your chart credits</p>
+<mat-dialog-content class="!flex flex-col gap-4">
+	<p>Tag some creators to add them to your chart credits</p>
 	<app-searchbar
 		#searchbar
 		[debounceDuration]="2500"
@@ -57,53 +57,28 @@
 			}
 		</mat-autocomplete>
 	</app-searchbar>
-	<ul class="flex flex-col items-center justify-start w-full pt-4">
-		@if (poolContributors.length > 0) {
-			@for (user of poolContributors; track user; let index = $index) {
-				<li class="flex flex-col items-start justify-start w-full">
-					<div
-						class="flex flex-row items-center justify-between gap-4 mb-2 w-full"
-					>
-						<span
-							class="flex flex-row items-center justify-start gap-4"
-						>
-							<app-avatar
-								[src]="user.imageUrl"
-								[alt]="user.username"
-							></app-avatar>
-							<span class="text-base font-medium">{{
-								user.username
-							}}</span>
-						</span>
-						<button
-							mat-icon-button
-							(click)="removeContributor(user.username)"
-						>
-							<mat-icon>close</mat-icon>
-						</button>
-					</div>
-					<!-- Separator -->
-					@if (index !== data.contributors.length - 1) {
-						<div
-							class="flex w-full h-[1px] rounded-full bg-outline-variant mb-3"
-						></div>
-					}
-				</li>
-			}
-		} @else {
-			<div class="flex flex-col items-center justify-center gap-4 pt-4">
-				<span class="text-5xl"
-					><mat-icon inline>conditions</mat-icon></span
-				>
-				<p class="text-center w-full px-6">
-					No contributors added. <br />
-					Start adding members for them to appear here!
-				</p>
-			</div>
-		}
-	</ul>
+	@if (poolContributors.length > 0) {
+		<app-contributor-tags
+			[contributors]="poolContributors"
+			(onRemoveContributor)="onRemove($event)"
+		></app-contributor-tags>
+	} @else {
+		<div class="flex flex-col items-center justify-center gap-4 pt-4">
+			<span class="text-5xl"><mat-icon inline>conditions</mat-icon></span>
+			<p class="text-center w-full px-6">
+				No contributors added. <br />
+				Start adding members for them to appear here!
+			</p>
+		</div>
+	}
 </mat-dialog-content>
 <mat-dialog-actions>
 	<button mat-button mat-dialog-close="cancel" cdkFocusInitial>Cancel</button>
-	<button mat-button mat-dialog-close="ok">Add</button>
+	<button
+		mat-button
+		mat-dialog-close="ok"
+		[disabled]="poolContributors.length < 1"
+	>
+		Add
+	</button>
 </mat-dialog-actions>
