--- a/src/app/routes/chart/dialogs/add-contributor/add-contributor-dialog.component.html
+++ b/src/app/routes/chart/dialogs/add-contributor/add-contributor-dialog.component.html
@@ -58,10 +58,16 @@
 		</mat-autocomplete>
 	</app-searchbar>
 	@if (poolContributors.length > 0) {
-		<app-contributor-tags
-			[contributors]="poolContributors"
-			(onRemoveContributor)="onRemove($event)"
-		></app-contributor-tags>
+		<ul class="flex flex-col items-center justify-start w-full gap-4">
+			@for (contributor of poolContributors; track $index) {
+				<app-contributor-item
+					[onRemove]="removeContributor($event)"
+					[user]="contributor.user"
+					[roles]=""
+				>
+				</app-contributor-item>
+			}
+		</ul>
 	} @else {
 		<div class="flex flex-col items-center justify-center gap-4 pt-4">
 			<span class="text-5xl"><mat-icon inline>conditions</mat-icon></span>
