--- a/src/app/routes/chart/dialogs/edit-contributor/edit-contributor-dialog.component.html
+++ b/src/app/routes/chart/dialogs/edit-contributor/edit-contributor-dialog.component.html
@@ -1,14 +1,14 @@
 <h2 mat-dialog-title>Edit roles</h2>
 <mat-dialog-content>
 	<p class="mb-4">Select the roles you want to add or remove</p>
-	<app-contributor-tags
-		(hasRolesChanged)="hasChanges.set($event)"
-		[contributors]="contributor"
-	></app-contributor-tags>
+	<app-contributor-item
+		[user]="data.contributor.user"
+		[roles]="roles"
+	></app-contributor-item>
 </mat-dialog-content>
 <mat-dialog-actions>
 	<button mat-button mat-dialog-close="cancel">Cancel</button>
-	<button mat-button mat-dialog-close="ok" [disabled]="!hasChanges()">
+	<button mat-button mat-dialog-close="ok" [disabled]="!hasChanges">
 		Save
 	</button>
 </mat-dialog-actions>
