--- a/src/app/routes/chart/dialogs/add-contributor/add-contributor-dialog.component.html
+++ b/src/app/routes/chart/dialogs/add-contributor/add-contributor-dialog.component.html
@@ -60,11 +60,7 @@
 	@if (poolContributors.length > 0) {
 		<ul class="flex flex-col items-center justify-start w-full gap-4">
 			@for (contributor of poolContributors; track $index) {
-				<app-contributor-item
-					[onRemove]="removeContributor($event)"
-					[user]="contributor.user"
-					[roles]=""
-				>
+				<app-contributor-item [user]="contributor.user" [roles]="roles">
 				</app-contributor-item>
 			}
 		</ul>
@@ -83,7 +79,9 @@
 	<button
 		mat-button
 		mat-dialog-close="ok"
-		[disabled]="poolContributors.length < 1"
+		[disabled]="
+			poolContributors.length < 1 || !allContributorsHaveAtLeastOneRole()
+		"
 	>
 		Add
 	</button>
