--- a/src/app/routes/chart/dialogs/edit-contributor/edit-contributor-dialog.component.html
+++ b/src/app/routes/chart/dialogs/edit-contributor/edit-contributor-dialog.component.html
@@ -8,7 +8,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
 	<button mat-button mat-dialog-close="cancel">Cancel</button>
-	<button mat-button mat-dialog-close="ok" [disabled]="!hasChanges">
-		Save
-	</button>
+	<button mat-button (click)="onSubmit()" [disabled]="isEqual()">Save</button>
 </mat-dialog-actions>
