💫 feat: contributor roles edit dialog working

--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -37,6 +37,7 @@
 			<app-chart-contributors-section
 				#contributorsSection
 				class="w-full"
+				[chartId]="chart.id"
 				[contributors]="chart.contributors"
 			></app-chart-contributors-section>
 			<app-chart-versions-section
