--- a/src/app/routes/chart/dialogs/edit-contributor/edit-contributor-dialog.component.html
+++ b/src/app/routes/chart/dialogs/edit-contributor/edit-contributor-dialog.component.html
@@ -7,6 +7,21 @@
 	></app-contributor-item>
 </mat-dialog-content>
 <mat-dialog-actions>
-	<button mat-button mat-dialog-close="cancel">Cancel</button>
-	<button mat-button (click)="onSubmit()" [disabled]="isEqual()">Save</button>
+	<button mat-button mat-dialog-close="cancel" [disabled]="isLoading()">
+		Cancel
+	</button>
+	<button
+		mat-button
+		(click)="onSubmit()"
+		[disabled]="isEqual() || isLoading()"
+	>
+		@if (isLoading()) {
+			<mat-progress-spinner
+				[diameter]="16"
+				[mode]="'indeterminate'"
+			></mat-progress-spinner>
+		} @else {
+			Save
+		}
+	</button>
 </mat-dialog-actions>
