--- a/src/app/routes/chart/subcomponents/contributor-item/contributor-item.component.html
+++ b/src/app/routes/chart/subcomponents/contributor-item/contributor-item.component.html
@@ -7,8 +7,8 @@
 			></app-avatar>
 			<span class="text-base font-medium">{{ user.username }}</span>
 		</span>
-		@if (onRemove) {
-			<button mat-icon-button (click)="onRemove(user.id)">
+		@if (canRemove) {
+			<button mat-icon-button (click)="remove.emit(user.id)">
 				<mat-icon>close</mat-icon>
 			</button>
 		}
