--- a/src/app/routes/chart/dialogs/add-contributor/add-contributor-dialog.component.html
+++ b/src/app/routes/chart/dialogs/add-contributor/add-contributor-dialog.component.html
@@ -57,10 +57,15 @@
 			}
 		</mat-autocomplete>
 	</app-searchbar>
-	@if (poolContributors.length > 0) {
+	@if (poolUsers.length > 0) {
 		<ul class="flex flex-col items-center justify-start w-full gap-4">
-			@for (contributor of poolContributors; track $index) {
-				<app-contributor-item [user]="contributor.user" [roles]="roles">
+			@for (user of poolUsers; track $index) {
+				<app-contributor-item
+					[user]="user"
+					[roles]="roles"
+					canRemove
+					(remove)="removeContributor($event)"
+				>
 				</app-contributor-item>
 			}
 		</ul>
@@ -75,14 +80,25 @@
 	}
 </mat-dialog-content>
 <mat-dialog-actions>
-	<button mat-button mat-dialog-close="cancel" cdkFocusInitial>Cancel</button>
+	<button mat-button mat-dialog-close="cancel" [disabled]="isLoading()">
+		Cancel
+	</button>
 	<button
 		mat-button
-		mat-dialog-close="ok"
+		(click)="onSubmit()"
 		[disabled]="
-			poolContributors.length < 1 || !allContributorsHaveAtLeastOneRole()
+			poolUsers.length < 1 ||
+			allContributorsHaveAtLeastOneRole() === false ||
+			isLoading()
 		"
 	>
-		Add
+		@if (isLoading()) {
+			<mat-progress-spinner
+				[diameter]="16"
+				[mode]="'indeterminate'"
+			></mat-progress-spinner>
+		} @else {
+			Save
+		}
 	</button>
 </mat-dialog-actions>
