💫 feat: chart delete flow working

--- a/src/app/routes/chart/chart.component.html
+++ b/src/app/routes/chart/chart.component.html
@@ -48,6 +48,8 @@
 			<app-chart-danger-zone-section
 				#dangerZoneSection
 				class="w-full"
+				[chartId]="chart.id"
+				[chartName]="chart.track"
 			></app-chart-danger-zone-section>
 		</div>
 	</main>
