--- a/src/app/routes/chart/dialogs/confirmation/confirmation-dialog.component.html
+++ b/src/app/routes/chart/dialogs/confirmation/confirmation-dialog.component.html
@@ -3,7 +3,7 @@
 	<p>{{ data.description }}</p>
 </mat-dialog-content>
 <mat-dialog-actions>
-	<button mat-button (click)="onCancel()" [disabled]="isLoading()">
+	<button mat-button mat-dialog-close="cancel" [disabled]="isLoading()">
 		Cancel
 	</button>
 	<button
