--- a/src/app/routes/chart/sections/danger-zone/danger-zone.component.html
+++ b/src/app/routes/chart/sections/danger-zone/danger-zone.component.html
@@ -12,7 +12,11 @@
 					certain.
 				</p>
 			</div>
-			<button mat-raised-button class="w-full md:w-fit !bg-red-100/5">
+			<button
+				mat-raised-button
+				class="w-full md:w-fit !bg-red-100/5"
+				(click)="openDeleteDialog()"
+			>
 				Delete this chart
 			</button>
 		</li>
