💫 feat: mobile app linking and Tailwind v4 update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-@if (showHeaderFooter) {
+@if (showHeader) {
 	<app-header></app-header>
 }
 <router-outlet />
-@if (showHeaderFooter) {
+@if (showFooter) {
 	<app-footer></app-footer>
 }
