--- a/src/app/routes/auth/callback/callback.component.html
+++ b/src/app/routes/auth/callback/callback.component.html
@@ -1,5 +1,5 @@
 <main
-	class="flex flex-col items-center justify-center w-full min-h-screen px-wrapper gap-9 md:gap-16"
+	class="flex flex-col items-center justify-center w-full min-h-[calc(100vh-7rem)] px-wrapper gap-9 md:gap-16"
 >
 	<div
 		class="flex flex-col items-center justify-center bg-surface-container rounded-2xl gap-9 p-12 w-full md:w-[400px] max-w-[90vw]"
