--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -39,7 +39,7 @@
 
 		<!-- Sections -->
 		<ul
-			class="flex flex-row items-center justify-end gap-16 order-1 md:order-2"
+			class="grid-cols-2 w-full md:flex flex-row items-center justify-start md:justify-end gap-8 md:gap-16 order-1 md:order-2"
 		>
 			<li class="flex flex-col items-start justify-start gap-6">
 				<h3 class="uppercase">Resources</h3>
@@ -70,7 +70,9 @@
 			</li>
 		</ul>
 	</div>
-	<div class="flex flex-row items-center justify-between gap-6 w-full">
+	<div
+		class="flex flex-row items-center justify-between gap-6 w-full mt-6 md:mt-0"
+	>
 		<!-- Status -->
 		<div class="flex flex-row items-center justify-start gap-2.5">
 			<div class="min-w-1.5 min-h-1.5 bg-yellow-400 rounded-full"></div>
