--- a/src/app/routes/link/link.component.html
+++ b/src/app/routes/link/link.component.html
@@ -1,3 +1,4 @@
+<app-public-header></app-public-header>
 <main
 	class="flex flex-col lg:flex-row items-center justify-center gap-wrapper md:gap-6 w-full min-h-screen px-wrapper py-wrapper md:py-12"
 >
