--- a/src/app/routes/privacy-policy/privacy-policy.component.html
+++ b/src/app/routes/privacy-policy/privacy-policy.component.html
@@ -1,3 +1,4 @@
+<app-public-header></app-public-header>
 <main
 	class="flex flex-col items-start justify-center gap-wrapper md:gap-12 w-full min-h-screen px-wrapper py-wrapper md:py-12 text-base font-normal leading-5"
 >
