--- a/src/app/routes/release-notes/release-notes.component.html
+++ b/src/app/routes/release-notes/release-notes.component.html
@@ -1,3 +1,4 @@
+<app-public-header></app-public-header>
 <main
 	class="flex flex-col items-start justify-center gap-wrapper md:gap-12 w-full min-h-screen px-wrapper py-wrapper md:pt-12 pb-20 text-base font-normal leading-5"
 >
